--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -5,106 +5,187 @@
     ViewData["Title"] = Localizer["2fa:title"];
 }
 
-<div id="app" class="flex flex-col space-y-6">
-  <h2 class="page-header">@Localizer["2fa.title"]</h2>
-    
-  <span>@Localizer["2fa.instructions"]</span>
-  
-  <partial name="Shared/ErrorList"/>
-  
-  @if (Model.Is2FaEnabled)
-    {
-        <div>
-            <span >@Localizer["2fa.active"]</span>&nbsp;<button type="button" class="danger" v-on:click="showDeactivate = true" >@Localizer["2fa.deactivate"]</button>
-        </div>
-        
-        
-        @if (Model.IsMachineRemembered)
+<div id="app">
+    <h2 class="page-header">@Localizer["2fa.title"]</h2>
+
+
+    <div class="space-y-6">
+        <span class="text-gray-500">@Localizer["2fa.instructions"]</span>
+        <partial name="Shared/ErrorList"/>
+
+        @if (Model.Is2FaEnabled)
         {
-            <a>@Localizer["2fa.forgetMachine"]</a>
+            <div class="space-y-6 flex flex-col">
+                <div class="space-x-4 ">
+                    <span >@Localizer["2fa.active"]</span>&nbsp;<button type="button" class="link" v-on:click="showDeactivate = true">@Localizer["2fa.deactivate"]</button>
+                </div>
+
+                @if (Model.IsMachineRemembered)
+                {
+                    <a>@Localizer["2fa.forgetMachine"]</a>
+                }
+               
+                 <div class="space-x-4">
+                     <span>@Model.RecoveryCodesLeft @Localizer["2fa.codesRemaining"]</span>
+                    <button type="button" class="primary" v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">Show Codes</button>
+                    <button type="button" class="primary" v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">Hide Codes</button>
+                </div>
+
+                <div class="grid grid-cols-3 gap-2" v-if="showCodes" v-show="showCodes" style="display: none">
+                    @foreach (var c in Model.RecoveryCodes)
+                    {
+                        <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-indigo-100 text-indigo-800">
+                            <code class="recovery-code">@c</code>
+                        </span>
+                    }
+                </div>
+               
+                @if (!string.IsNullOrEmpty(Model.FallbackNumber))
+                {
+                    <div class="space-x-4">
+                        <strong>Fallback number</strong>
+                        <span>@Model.FallbackNumber</span>
+                        <button v-on:click="showRemovePhone = true" type="button" class="danger self-end">
+                            Remove
+                        </button>
+                    </div>
+                }
+                else
+                {
+                    <div class="space-x-4">
+                        <strong>Fallback number</strong> 
+                        <a href="~/Account/Manage/Phone">@Localizer["2fa.addPhone"]</a>
+                    </div>
+                    
+                }
+            </div>
         }
-       
+        else
+        {
+            <div>
+                <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="success">@Localizer["2fa.activate"]</a>
+            </div>
+        }
+
+        <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showDeactivate" v-show="showDeactivate" style="display: none">
+            <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+                <!--
+                Background overlay, show/hide based on modal state.
         
-      <span>@Model.RecoveryCodesLeft @Localizer["2fa.codesRemaining"]</span>
-      <a v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">Show Codes</a>
-      <a v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">Hide Codes</a>                                                             
-     
-        <div class="grid grid-cols-3 gap-2"  v-if="showCodes" v-show="showCodes" style="display: none">
-          @foreach (var c in Model.RecoveryCodes)
-          {
-            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-indigo-100 text-indigo-800">
-              <code class="recovery-code">@c</code>
-            </span>
-          }
-        </div>
-    }
-    else
-    {
-        <div>
-            <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="primary">@Localizer["2fa.activate"]</a>
-        </div>
-    }
-   
-    <!-- This example requires Tailwind CSS v2.0+ -->
-    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showDeactivate" v-show="showDeactivate" style="display: none">
-      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <!--
-          Background overlay, show/hide based on modal state.
-    
-          Entering: "ease-out duration-300"
-            From: "opacity-0"
-            To: "opacity-100"
-          Leaving: "ease-in duration-200"
-            From: "opacity-100"
-            To: "opacity-0"
-        -->
-        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
-    
-        <!-- This element is to trick the browser into centering the modal contents. -->
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-    
-        <!--
-          Modal panel, show/hide based on modal state.
-    
-          Entering: "ease-out duration-300"
-            From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-            To: "opacity-100 translate-y-0 sm:scale-100"
-          Leaving: "ease-in duration-200"
-            From: "opacity-100 translate-y-0 sm:scale-100"
-            To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-        -->
-        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-          <div class="sm:flex sm:items-start">
-            <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-              <!-- Heroicon name: outline/exclamation -->
-              <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-              </svg>
+                Entering: "ease-out duration-300"
+                From: "opacity-0"
+                To: "opacity-100"
+                Leaving: "ease-in duration-200"
+                From: "opacity-100"
+                To: "opacity-0"
+                -->
+                <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+
+                <!-- This element is to trick the browser into centering the modal contents. -->
+                <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+                <!--
+                Modal panel, show/hide based on modal state.
+        
+                Entering: "ease-out duration-300"
+                From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                To: "opacity-100 translate-y-0 sm:scale-100"
+                Leaving: "ease-in duration-200"
+                From: "opacity-100 translate-y-0 sm:scale-100"
+                To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                -->
+                <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                            <!-- Heroicon name: outline/exclamation -->
+                            <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
+                            </svg>
+                        </div>
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                                Deactivate account
+                            </h3>
+                            <div class="mt-2">
+                                <p class="text-sm text-gray-500">
+                                    Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                        <button v-on:click="disable2Fa" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                            Deactivate
+                        </button>
+                        <button v-on:click="showDeactivate = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
+                            Cancel
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                Deactivate account
-              </h3>
-              <div class="mt-2">
-                <p class="text-sm text-gray-500">
-                  Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-            <button v-on:click="disable2Fa" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-              Deactivate
-            </button>
-            <button  v-on:click="showDeactivate = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
-              Cancel
-            </button>
-          </div>
         </div>
-      </div>
+        
+         <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showRemovePhone" v-show="showRemovePhone" style="display: none">
+                    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+                        <!--
+                        Background overlay, show/hide based on modal state.
+                
+                        Entering: "ease-out duration-300"
+                        From: "opacity-0"
+                        To: "opacity-100"
+                        Leaving: "ease-in duration-200"
+                        From: "opacity-100"
+                        To: "opacity-0"
+                        -->
+                        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+        
+                        <!-- This element is to trick the browser into centering the modal contents. -->
+                        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+        
+                        <!--
+                        Modal panel, show/hide based on modal state.
+                
+                        Entering: "ease-out duration-300"
+                        From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                        To: "opacity-100 translate-y-0 sm:scale-100"
+                        Leaving: "ease-in duration-200"
+                        From: "opacity-100 translate-y-0 sm:scale-100"
+                        To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                        -->
+                        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+                            <div class="sm:flex sm:items-start">
+                                <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                                    <!-- Heroicon name: outline/exclamation -->
+                                    <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
+                                    </svg>
+                                </div>
+                                <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                                        Deactivate account
+                                    </h3>
+                                    <div class="mt-2">
+                                        <p class="text-sm text-gray-500">
+                                            Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                                <button v-on:click="removePhone" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                                    Remove phone
+                                </button>
+                                <button v-on:click="showRemovePhone = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
+                                    Cancel
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </div>
+
 </div>
 
 @section Scripts {
-     <script src="/js/pages/manage/2fa.js"></script>
+    <script src="/js/pages/manage/2fa.js"></script>
 }
