--- a/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
@@ -61,6 +61,9 @@
         @*   </div> *@
         @* </div> *@
         <div class="ml-3 relative">
+          @User.Identity.Name
+        </div>
+        <div class="ml-3 relative">
           <a href="~/account/logout"><i class="fas fa-times"></i> </a>
         </div>
       </div>
