--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -2,10 +2,11 @@
 
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = Localizer["changePassword:submit"];
+    ViewData["Title"] = Localizer["changePassword:title"];
 }
 
 <div id="app">
+    <h2 class="page-header">@Localizer["changePassword:title"]</h2>
     <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
@@ -13,11 +14,11 @@
             <span class="mt-4">@Localizer["changePassword:success"]</span>
         </div>
     </div>
-    
+
     <form class="space-y-4" method="POST" v-on:submit.prevent="changePassword" id="formChangePassword" v-if="status != 'sending' && status != 'done'">
-        <span>@Localizer["changePassword:instructions"]</span>
+        <span class="text-gray-500">@Localizer["changePassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
-       
+
         <input id="currentPassword" name="currentPassword" type="password" v-model="currentPassword" placeholder="@Localizer["changePassword:currentPassword"]" autocomplete="current-password" required class="text-box ">
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["changePassword:password"]" autocomplete="current-password" required class="text-box ">
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["changePassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
