--- a/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div id="app" >
-
+<h2 class="page-header">@Localizer["changeEmail.title"]</h2>
     <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
@@ -18,7 +18,7 @@
 
     
     <form class="space-y-4" method="POST" v-on:submit.prevent="changeEmail" id="formChangeEmail" v-if="status == ''">
-        <span>@Localizer["changeEmail:instructions"]</span>
+        <span class="text-gray-500">@Localizer["changeEmail:instructions"]</span>
         <div>
             <strong>@Localizer["changeEmail:currentEmail"]</strong>&nbsp;
             <span>@Model.Email</span>
