--- a/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
@@ -6,18 +6,20 @@
 }
 
 <div id="app">
-    <div class="flex justify-center mt-6">
+    <h2 class="page-header">@Localizer["setPassword.title"]</h2>
+    
+    <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
             <span class="mt-4">@Localizer["setPassword:success"]</span>
         </div>
     </div>
-    
-    <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword" v-if="status != 'sending' && status != 'done'">
-        <span>@Localizer["setPassword:instructions"]</span>
+
+    <form class="space-y-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword" v-if="status != 'sending' && status != 'done'">
+        <span class="text-gray-500">@Localizer["setPassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
-       
+
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["setPassword:password"]" autocomplete="current-password" required class="text-box ">
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["setPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
         <button v-on:click.prevent="setPassword" class="primary full">
