--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -26,13 +26,26 @@
     {
         @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-red-600 hover:bg-red-700  focus:ring-red-500
     }
+
+    button.success
+    {
+        @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-green-600 hover:bg-green-700  focus:ring-green-500
+    }
     
+    button.link
+    {
+        @apply font-medium text-indigo-600 hover:text-indigo-500 outline-none;
+    }
     a {
         @apply font-medium text-indigo-600 hover:text-indigo-500
     }
 
     a.primary {
         @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-indigo-600 hover:bg-indigo-700  focus:ring-indigo-500  hover:text-white
+    }
+
+    a.success {
+        @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-green-600 hover:bg-green-700  focus:ring-green-500  hover:text-white
     }
     
     .btn-simple
@@ -42,7 +55,7 @@
     
     .page-header
     {
-        @apply text-3xl font-extrabold text-gray-900;
+        @apply text-3xl font-extrabold text-gray-900 mb-4;
     }
 
 }
