--- a/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
@@ -34,7 +34,7 @@
         <button v-on:click.prevent="sendPhoneChangeMessage" class="primary full" v-if="status == ''">
             @Localizer["changePhone:sendMessage"]
         </button>
-         <button v-on:click.prevent="chagePhone" class="primary full" v-if="status == 'sent'">
+         <button v-on:click.prevent="changePhone" class="primary full" v-if="status == 'sent'">
             @Localizer["changePhone:submit"]
         </button>
     </form>
