--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -187,5 +187,5 @@
 </div>
 
 @section Scripts {
-    <script src="/js/pages/manage/2fa.js"></script>
+    <script src="/js/pages/manage/twoFactorAuthentication.js"></script>
 }
