--- a/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
@@ -2,41 +2,42 @@
 @model Nuages.Identity.UI.Pages.Account.Manage.PhoneModel
 
 @{
-    ViewData["Title"] = Localizer["changePhone:title"];
+    ViewData["Title"] = Localizer["addPhone:title"];
 }
 
-<div id="app" >
- <h2 class="page-header">@Localizer["changePhone.title"]</h2>
-    
+<div id="app">
+    <h2 class="page-header">@Localizer["addPhone.title"]</h2>
+
     <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changePhone:success"]</span>
+            <span class="mt-4">@Localizer["addPhone:success"]</span>
         </div>
     </div>
 
-    
-    <form class="space-y-4" method="POST" v-on:submit.prevent="changePhone" id="formChangePhone" v-if="status != 'sending'">
-        <span class="text-gray-500" v-if="status == ''">@Localizer["changePhone:instructions"]</span>
-        <div>
-            <strong>@Localizer["changePhone:currentPhoneNumber"]</strong>&nbsp;
-            <span>@Model.PhoneNumber</span>
-        </div>
-                
+    <form class="space-y-4" method="POST" v-on:submit.prevent="addPhone" id="formAddPhone" v-if="status != 'sending'">
+
         <partial name="Shared/ErrorList"/>
-       
-        <input id="phone" name="phone" type="text" autofocus="" v-model="phone" placeholder="@Localizer["changePhone:newPhoneNumber"]" required class="text-box">
-        
-        <span class="text-gray-500"  v-if="status == 'sent'">@Localizer["changePhone:instructions"]</span>
-        <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="@Localizer["changePhone:code"]" required class="text-box"  v-if="status == 'sent'">
-        
-        <button v-on:click.prevent="sendPhoneChangeMessage" class="primary full" v-if="status == ''">
-            @Localizer["changePhone:sendMessage"]
-        </button>
-         <button v-on:click.prevent="changePhone" class="primary full" v-if="status == 'sent'">
-            @Localizer["changePhone:submit"]
-        </button>
+
+        <div v-if="status == ''" class="space-y-4">
+            <span class="text-gray-500">@Localizer["addPhone:instructions"]</span>
+           
+            <input id="phone" name="phone" type="text" autofocus="" v-model="phone" placeholder="@Localizer["addPhone:newPhoneNumber"]" required class="text-box">
+            <button v-on:click.prevent="sendPhoneChangeMessage" class="primary full" v-if="status == ''">
+                @Localizer["addPhone:sendMessage"]
+            </button>
+        </div>
+
+        <div v-if="status == 'sent'" v-show="status == 'sent'" class="space-y-4" style="display: none">
+            <span class="text-gray-500 ">@Localizer["addPhone:instructions2"]</span>
+            <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="@Localizer["addPhone:code"]" required class="text-box">
+            <button v-on:click.prevent="addPhone" class="primary full">
+                @Localizer["addPhone:submit"]
+            </button>
+        </div>
+
+
     </form>
 
 </div>
@@ -45,7 +46,7 @@
 @section Scripts
 {
     <script>
-        var phoneRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["changePhone:phone"])";  
+        var phoneRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["addPhone:newPhoneNumber"])";  
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";  
          
     </script>
