--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -16,7 +16,7 @@
         @if (Model.Is2FaEnabled)
         {
             <div class="space-y-6 flex flex-col">
-                <div class="space-x-4 ">
+                <div class="space-x-4 flex justify-between items-center">
                     <span >@Localizer["2fa.active"]</span>&nbsp;<button type="button" class="link" v-on:click="showDeactivate = true">@Localizer["2fa.deactivate"]</button>
                 </div>
 
@@ -25,10 +25,10 @@
                     <a>@Localizer["2fa.forgetMachine"]</a>
                 }
                
-                 <div class="space-x-4">
+                 <div class="space-x-4 flex justify-between items-center">
                      <span>@Model.RecoveryCodesLeft @Localizer["2fa.codesRemaining"]</span>
-                    <button type="button" class="primary" v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">Show Codes</button>
-                    <button type="button" class="primary" v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">Hide Codes</button>
+                    <button type="button" class="link" v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">@Localizer["2fa:showCodes"]</button>
+                    <button type="button" class="link" v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">@Localizer["2fa:hideCodes"]</button>
                 </div>
 
                 <div class="grid grid-cols-3 gap-2" v-if="showCodes" v-show="showCodes" style="display: none">
@@ -42,18 +42,18 @@
                
                 @if (!string.IsNullOrEmpty(Model.FallbackNumber))
                 {
-                    <div class="space-x-4">
-                        <strong>Fallback number</strong>
+                    <div class="space-x-4 flex justify-between items-center">
+                        <span>@Localizer["2fa:fallback"]</span>
                         <span>@Model.FallbackNumber</span>
-                        <button v-on:click="showRemovePhone = true" type="button" class="danger self-end">
-                            Remove
+                        <button v-on:click="showRemovePhone = true" type="button" class="link self-end">
+                            @Localizer["clear"]
                         </button>
                     </div>
                 }
                 else
                 {
-                    <div class="space-x-4">
-                        <strong>Fallback number</strong> 
+                    <div class="space-x-4 flex justify-between items-center">
+                        <span>@Localizer["2fa:fallback"]</span> 
                         <a href="~/Account/Manage/Phone">@Localizer["2fa.addPhone"]</a>
                     </div>
                     
@@ -62,7 +62,7 @@
         }
         else
         {
-            <div>
+            <div class="flex justify-between items-center">
                 <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="success">@Localizer["2fa.activate"]</a>
             </div>
         }
@@ -104,21 +104,21 @@
                         </div>
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                             <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                                Deactivate account
+                                @Localizer["2fa.deactivateTitle"]
                             </h3>
                             <div class="mt-2">
                                 <p class="text-sm text-gray-500">
-                                    Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
+                                    @Localizer["2fa.deactivateConfirmation"]
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
                         <button v-on:click="disable2Fa" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-                            Deactivate
+                             @Localizer["2fa.deactivate"]
                         </button>
                         <button v-on:click="showDeactivate = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
-                            Cancel
+                             @Localizer["cancel"]
                         </button>
                     </div>
                 </div>
@@ -162,21 +162,21 @@
                                 </div>
                                 <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                                     <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                                        Deactivate account
+                                        @Localizer["2fa:clearPhoneTitle"]
                                     </h3>
                                     <div class="mt-2">
                                         <p class="text-sm text-gray-500">
-                                            Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
+                                            @Localizer["2fa:clearPhoneConfirm"]
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
                                 <button v-on:click="removePhone" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-                                    Remove phone
+                                     @Localizer["clear"]
                                 </button>
                                 <button v-on:click="showRemovePhone = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
-                                    Cancel
+                                     @Localizer["cancel"]
                                 </button>
                             </div>
                         </div>
