--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -7,28 +7,41 @@
 
 <div id="app">
     <h2 class="page-header">@Localizer["changePassword:title"]</h2>
-    <div class="flex justify-center">
-        <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-        <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changePassword:success"]</span>
-        </div>
-    </div>
+    
+   
+    
+    @* <div class="flex justify-center"> *@
+    @*     <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i> *@
+    @*     <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none"> *@
+    @*         <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i> *@
+    @*         <span class="mt-4">@Localizer["changePassword:success"]</span> *@
+    @*     </div> *@
+    @* </div> *@
 
-    <form class="space-y-4" method="POST" v-on:submit.prevent="changePassword" id="formChangePassword" v-if="status != 'sending' && status != 'done'">
+    <form class="space-y-4" method="POST" v-on:submit.prevent="changePassword" id="formChangePassword">
         <span class="text-gray-500">@Localizer["changePassword:instructions"]</span>
+        
+        <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+            <span class="text-green-700 font-medium"><i class="fas fa-check"></i> @Localizer["changePassword:success"]</span>
+        </div>
+        
         <partial name="Shared/ErrorList"/>
 
         <input id="currentPassword" name="currentPassword" type="password" v-model="currentPassword" placeholder="@Localizer["changePassword:currentPassword"]" autocomplete="current-password" required class="text-box ">
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["changePassword:password"]" autocomplete="current-password" required class="text-box ">
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["changePassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-        <button v-on:click.prevent="changePassword" class="primary full">
-            @Localizer["changePassword:submit"]
+        <button v-on:click.prevent="changePassword" class="primary full items-center">
+            
+            @Localizer["changePassword:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         </button>
-        <partial name="Shared/PasswordRequirements"/>
+       
     </form>
 </div>
 
+@section RightNav
+{
+     <partial name="Shared/PasswordRequirements"/>
+}
 
 @section Scripts
 {
