--- a/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
@@ -23,7 +23,7 @@
         </button>
     </form>
     <div class="mt-4">
-        <partial name="Shared/Warning" model='new { Title = Localizer["warning"], Message = Localizer["login.cantRemember"] }'/>
+        <partial name="Shared/_Warning" model='new { Title = Localizer["warning"], Message = Localizer["login.cantRemember"] }'/>
     </div>
 </div>
 
