--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -24,7 +24,7 @@
     </form>
 
     <div class="mt-4">
-        <partial name="Shared/Warning" model='new { Title = Localizer["warning"], Message = Localizer["login.cantRemember"] }'/>
+        <partial name="Shared/_Warning" model='new { Title = Localizer["warning"], Message = Localizer["login.cantRemember"] }'/>
     </div>
 
 </div>
