--- a/Nuages.Identity.UI/Pages/Shared/_Warning.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Warning.cshtml
@@ -4,11 +4,11 @@
             <!-- Heroicon name: solid/exclamation -->
         </div>
         <div class="ml-3">
-            <h3 class="text-sm font-medium text-orange-800">
+            <h3 class=" font-medium text-orange-800">
                
                 @Model?.Title
             </h3>
-            <div class="mt-2 text-sm text-orange-700">
+            <div class="mt-2  text-orange-700">
                  @Model?.Message
           
             </div>
