--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -63,7 +63,7 @@
         else
         {
             <div class="flex justify-between items-center">
-                <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="success">@Localizer["2fa.activate"]</a>
+                <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="link">@Localizer["2fa.activate"]</a>
             </div>
         }
 
