--- a/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
@@ -6,30 +6,31 @@
     ViewData["Title"] = Localizer["changeEmail:title"];
 }
 
-<div id="app" >
-<h2 class="page-header">@Localizer["changeEmail.title"]</h2>
-    <div class="flex justify-center">
-        <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-        <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changeEmail:seeEmail"]</span>
-        </div>
-    </div>
+<div id="app">
+    <h2 class="page-header">@Localizer["changeEmail.title"]</h2>
 
-    
-    <form class="space-y-4" method="POST" v-on:submit.prevent="changeEmail" id="formChangeEmail" v-if="status == ''">
-        <span class="text-gray-500">@Localizer["changeEmail:instructions"]</span>
-        <div>
-            <strong>@Localizer["changeEmail:currentEmail"]</strong>&nbsp;
-            <span>@Model.Email</span>
-        </div>
-                
-        <partial name="Shared/ErrorList"/>
-       
-        <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["changeEmail:newEmail"]" required class="text-box">
-        <button v-on:click.prevent="changeEmail" class="primary full">
-            @Localizer["changeEmail:submit"]
-        </button>
+    <form  method="POST" v-on:submit.prevent="changeEmail" id="formChangeEmail">
+        <fieldset :disabled="status == 'sending'" class="space-y-4">
+            <span class="text-gray-500">@Localizer["changeEmail:instructions"]</span>
+            <div>
+                <strong>@Localizer["changeEmail:currentEmail"]</strong>&nbsp;
+                <span>@Model.Email</span>
+            </div>
+
+            <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+                <span class="text-green-700 font-medium">
+                    <i class="fas fa-check"></i> @Localizer["changeEmail:seeEmail"]
+                </span>
+            </div>
+
+            <partial name="Shared/ErrorList"/>
+
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["changeEmail:newEmail"]" required class="text-box">
+            <button v-on:click.prevent="changeEmail" class="primary full items-center" :disabled="status == 'sending'">
+                @Localizer["changeEmail:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+        </fieldset>
+
     </form>
 
 </div>
