--- a/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -6,14 +6,8 @@
 
 <div  id="app">
     <h2 class="page-header">Configure authenticator app</h2>
-    <div class="flex justify-center">
-        <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-        <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        </div>
-    </div>
     
-    <div v-if="status == ''" v-show="status == ''" class="space-y-4 flex flex-col" >
+    <div class="space-y-4 flex flex-col" >
          <div class="text-gray-500">To use an authenticator app go through the following steps:</div>
             
             <div class="space-y-2">
@@ -32,10 +26,12 @@
             </p>
             <div>
                   <partial name="Shared/ErrorList"/>
-                  <form class="mt-4 w-72 flex space-x-2" id="formCode" method="post" v-on:submit.prevent="verifyCode" v-if="status != 'sending' && status != 'done'">
-                     <input id="code" name="code" required class="text-box " v-model="code"/>
-                    <button type="button" class="primary" v-on:click.prevent="verifyCode">Verify</button>
-                  
+                  <form class="mt-4" id="formCode" method="post" v-on:submit.prevent="verifyCode">
+                      <fieldset :disabled="status == 'sending'" class="flex flex-row space-x-2">
+                           <input id="code" name="code" required class="text-box " v-model="code"/>
+                            <button type="button" class="primary items-center w-36" v-on:click.prevent="verifyCode">@Localizer["enableAuthenticator:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+                            </button>
+                      </fieldset>
                   </form>
             </div>
     </div>
