--- a/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
@@ -8,28 +8,30 @@
 <div id="app">
     <h2 class="page-header">@Localizer["setPassword.title"]</h2>
     
-    <div class="flex justify-center">
-        <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-        <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["setPassword:success"]</span>
-        </div>
-    </div>
-
-    <form class="space-y-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword" v-if="status != 'sending' && status != 'done'">
+    <form class="space-y-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword">
         <span class="text-gray-500">@Localizer["setPassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
-
-        <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["setPassword:password"]" autocomplete="current-password" required class="text-box ">
-        <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["setPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-        <button v-on:click.prevent="setPassword" class="primary full">
-            @Localizer["setPassword:submit"]
-        </button>
-        <partial name="Shared/PasswordRequirements"/>
+        <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+            <span class="text-green-700 font-medium">
+                <i class="fas fa-check"></i> @Localizer["setPassword:success"]
+            </span>
+        </div>
+        <fieldset class="space-y-4"  :disabled="status == 'sending'" v-if="status != 'done'">
+              <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["setPassword:password"]" autocomplete="current-password" required class="text-box ">
+                    <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["setPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
+                    <button v-on:click.prevent="setPassword" class="primary full items-center" :disabled="status == 'sending'">
+                        @Localizer["setPassword:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+                    </button>
+        </fieldset>
+      
+        
     </form>
 </div>
 
-
+@section RightNav
+{
+    <partial name="Shared/PasswordRequirements"/>
+}
 @section Scripts
 {
     <script>
