--- a/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
@@ -8,28 +8,26 @@
 <div id="app" >
  <h2 class="page-header">@Localizer["changeUsername.title"]</h2>
     
-    <div class="flex justify-center">
-        <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-        <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changeUsername:success"]</span>
-        </div>
-    </div>
-
+    <form method="POST" v-on:submit.prevent="changeUsername" id="formChangeUsername">
+        <fieldset :disabled="status == 'sending'"  class="space-y-4">
+            <span class="text-gray-500">@Localizer["changeUsername:instructions"]</span>
+            <div>
+                <strong>@Localizer["changeUsername:currentUsername"]</strong>&nbsp;
+                <span >{{currentUserName}}</span>
+            </div>
     
-    <form class="space-y-4" method="POST" v-on:submit.prevent="changeUsername" id="formChangeUsername" v-if="status == ''">
-        <span class="text-gray-500">@Localizer["changeUsername:instructions"]</span>
-        <div>
-            <strong>@Localizer["changeUsername:currentUsername"]</strong>&nbsp;
-            <span>@Model.Username</span>
-        </div>
-                
-        <partial name="Shared/ErrorList"/>
+            <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+                <span class="text-green-700 font-medium"><i class="fas fa-check"></i> @Localizer["changeUsername:success"]</span>
+            </div>
+    
+            <partial name="Shared/ErrorList"/>
+    
+            <input id="username" name="username" type="text" autofocus="" v-model="username" placeholder="@Localizer["changeUsername:newUserName"]" required class="text-box">
+            <button v-on:click.prevent="changeUsername" class="primary full items-center" :disabled="status == 'sending'">
+                @Localizer["changeUsername:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+        </fieldset>
        
-        <input id="username" name="username" type="text" autofocus="" v-model="username" placeholder="@Localizer["changeUsername:newUserName"]" required class="text-box">
-        <button v-on:click.prevent="changeUsername" class="primary full">
-            @Localizer["changeUsername:submit"]
-        </button>
     </form>
 
 </div>
@@ -39,7 +37,7 @@
 {
     <script>
         var usernameRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["username"])";  
-        
+        var currentUserName = "@Model.Username";
     </script>
     <script src="/js/pages/manage/username.js"></script>
 }
