--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -6,21 +6,24 @@
     ViewData["Title"] = Localizer["passwordLess:title"];
 }
 
-<div class="flex justify-center mt-6">
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        <span class="mt-4">@Localizer["passwordLess:seeEmail"]</span>
-    </div>
-</div>
+<form class="mt-4 space-y-4" method="POST" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless">
+    
+     <span>@Localizer["passwordLess:instructions"]</span>
+            <partial name="Shared/ErrorList"/>
+            <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+                <span class="text-green-700 font-medium">
+                    <i class="fas fa-check"></i> @Localizer["passwordLess:seeEmail"]
+                </span>
+            </div>
+            
+    <fieldset class="space-y-4 " :disabled="status == 'sending'" v-if="status != 'done'">
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless" v-if="status == ''">
-    <span>@Localizer["passwordLess:instructions"]</span>
-    <partial name="Shared/ErrorList"/>
-    <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
-    <button v-on:click.prevent="sendPasswordlessInfo" class="primary full">
-        @Localizer["passwordLess:send"]
-    </button>
+        <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
+        <button v-on:click.prevent="sendPasswordlessInfo" class="primary full items-center" :disabled="status == 'sending'">
+            @Localizer["passwordLess:send"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+        </button>
+    </fieldset>
+
 </form>
 
 @section Scripts
