--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -6,27 +6,21 @@
     ViewData["Title"] = Localizer["recoveryCode.title"];
 }
 
-
-<div class="flex justify-center mt-6">
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-</div>
-
-
-<div v-show="status != 'sending'">
-    <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
-        <span>@Localizer["recoveryCode.instructions"]</span>
-        <partial name="Shared/ErrorList"/>
-        <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
-
-        <button v-on:click.prevent="login" class="primary full">
-            @Localizer["login:connect"]
-        </button>
+<div >
+    <form class="mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
+        <fieldset class="space-y-4 "  :disabled="status == 'sending'">
+              <span>@Localizer["recoveryCode.instructions"]</span>
+                    <partial name="Shared/ErrorList"/>
+                    <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
+            
+                    <button v-on:click.prevent="login" class="primary full items-center" :disabled="status == 'sending'">
+                        @Localizer["login:connect"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+                    </button>
+        </fieldset>
     </form>
-
     <div class="mt-4">
         <partial name="Shared/_Warning" model='new { Title = Localizer["warning"], Message = Localizer["login.cantRemember"] }'/>
     </div>
-
 </div>
 
 @section MainFooter
