--- a/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
@@ -6,20 +6,11 @@
     ViewData["Title"] = Localizer["loginWithSMS:title"];
 }
 
-
-<div class="flex justify-center mt-6">
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        <span class="mt-4">@Localizer["loginWithSMS:seeSMS"]</span>
-    </div>
-</div>
-
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="loginSMS" id="formLoginSMS" v-if="status == ''">
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="loginSMS" id="formLoginSMS" >
     <span>@Localizer["loginWithSMS:instructions"]</span>
     <partial name="Shared/ErrorList"/>
-    <button v-on:click.prevent="loginSMS" class="primary full">
-        @Localizer["loginWithSMS:send"]
+    <button v-on:click.prevent="loginSMS" class="primary full items-center"  :disabled="status == 'sending'">
+        @Localizer["loginWithSMS:send"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
     </button>
 </form>
 
